# codestyle

./: .travis.yml  Makefile.am  README.md  configure.ac  stylecheck.c
tests/: Makefile.am  chk_SP_leading.sh  chk_disable_SP_leading.sh  chk_disable_trailing_whitespace.sh  chk_file_list.sh  chk_functioning.sh  chk_ignore_file.sh  chk_ignore_file_short.sh  chk_linelength.sh  chk_linelength_tabs.sh  chk_more_files.sh  chk_permit_dos_format.sh  chk_trailing_whitespace.sh
