TESTS_SHELLSCRIPTS = \
	chk_SP_leading.sh \
	chk_trailing_whitespace.sh \
	chk_linelength.sh \
	chk_linelength_tabs.sh \
	chk_functioning.sh \
	chk_more_files.sh \
	chk_ignore_file.sh \
	chk_ignore_file_short.sh \
	chk_permit_dos_format.sh \
	chk_disable_trailing_whitespace.sh \
	chk_disable_SP_leading.sh

TESTS = \
	$(TESTS_SHELLSCRIPTS)

EXTRA_DIST = \
	$(TESTS_SHELLSCRIPTS)
